k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: birum-home-app
spec:
  type: NodePort
  selector:
    app: birum-home-app
  ports:
    - port: 8080
      targetPort: 19006
