k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birum-home-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/healthcheck-path: /
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:999198318212:certificate/eec310da-9043-4cd5-b12d-9f07d79e0467
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - mattbirum.com
  rules:
  - host: mattbirum.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: birum-home-app
            port:
              number: 8080
